--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.22.0",
     "node-sass": "^4.8.3",
     "normalize.css": "^8.0.0",
+    "numeral": "^2.0.6",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "^15.6.2",
@@ -45,17 +46,17 @@
   },
   "devDependencies": {
     "chalk": "^2.4.1",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.3",
     "eslint": "4.9.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
     "eslint-plugin-react": "7.4.0",
-    "webpack-cli": "^2.0.12",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.3",
     "jest": "^22.4.3",
     "react-test-renderer": "^16.3.2",
+    "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
   }
 }
